--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "engines": {
+    "node": "v16.15.1",
+    "yarn": "please-use-npm"
+  },
   "dependencies": {
     "axios": "1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wouter": "2.10.1",
+    "zustand": "4.3.8"
   },
   "devDependencies": {
+    "@types/node": "^20.1.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
